automatic code cleanup